# src/api/timeInterval/controllers/intervals.routes.ts
@@ -1,0 +1,10 @@
+// LIBS
+import { Router } from 'express';
+
+// FUNCTIONS
+import { listTimeIntervals } from './listTimeIntervals';
+
+// ROUTES
+export const TimeIntervalRouter = Router();
+
+TimeIntervalRouter.get('/list', listTimeIntervals);
